docs/0.15/_sources/api/gammapy.modeling.models.TemplateSpatialModel.rst.txt
TemplateSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpatialModel.default_parameters
      ~TemplateSpatialModel.evaluation_radius
      ~TemplateSpatialModel.frame
      ~TemplateSpatialModel.norm
      ~TemplateSpatialModel.parameters
      ~TemplateSpatialModel.phi_0
      ~TemplateSpatialModel.position
      ~TemplateSpatialModel.position_error
      ~TemplateSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpatialModel.__call__
      ~TemplateSpatialModel.copy
      ~TemplateSpatialModel.create
      ~TemplateSpatialModel.evaluate
      ~TemplateSpatialModel.evaluate_geom
      ~TemplateSpatialModel.from_dict
      ~TemplateSpatialModel.read
      ~TemplateSpatialModel.to_dict
      ~TemplateSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: read
   .. automethod:: to_dict
   .. automethod:: to_region
